--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="profile">
       <img
         src="./assets/avatar.png"
-        alt="Foto De Kaique Costa Sorrindo, usando polo branca e cachorro de fundo." />
+        alt="Kaique Costa" />
       <p>Kaique Costa</p>
     </div>
 
