--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="container">
     <div id="profile">
       <img
-        src="./assets/avatar.png"
+        src="./assets/Avatar.png"
         alt="Kaique Costa" />
       <p>Kaique Costa</p>
     </div>
