--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
     <ul>
       <li>
-        <a href="https://contate.me/kaiiquecosta">WhatsApp</a>
+        <a href="https://contate.me/kaiiquecosta" target="_blank"
+          >WhatsApp</a>
       </li>
       <li>
         <a href="https://www.instagram.com/imkayoff/" target="_blank"
